--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
     "scratch-storage": "^1.0.0",
     "scratch-svg-renderer": "0.2.0-prerelease.20210114214521",
     "twgl.js": "4.4.0"
-  }
+  },
+  "private": true
 }
