--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdoc": "^3.6.0",
     "json": "^9.0.4",
     "playwright-chromium": "^1.0.1",
+    "scratch-render-fonts": "1.0.0-prerelease.20210401210003",
     "scratch-vm": "0.2.0-prerelease.20201125065300",
     "tap": "^11.0.0",
     "travis-after-all": "^1.4.4",
